<resources>
    <string name="app_name">Uberhub</string>

    <string name="title_activity_signup">Cadastro de Pessoas</string>
    <string name="title_activity_opportunity">Cadastro de Oportunidades</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Activity Title Signin -->
    <string name="title_activity_signin">Login</string>

    <!-- Fragment Signin Create Account -->
    <string name="signin_create_account_txt_subtitle">Um Ecossistema de\n possibilidades</string>
    <string name="signin_create_account_btn_create_account">Criar conta</string>
    <string name="signin_create_account_btn_signin">Fazer login</string>
    <string name="signin_create_account_label_have_account">Não possui uma conta? <font color='#5000B8'><b>Clique aqui</b></font></string>
    <string name="signin_create_account_btn_continue">Continuar</string>

    <!-- Fragment Signin With Accounts -->
    <string name="signin_with_accounts_txt_subtitle">Bem-vindo de volta!</string>
    <string name="signin_with_accounts_btn_input_account_uberhub">Entrar com conta Uberhub</string>
    <string name="signin_with_accounts_btn_input_account_google">Entrar com Google</string>
    <string name="signin_with_accounts_btn_input_account_facebook">Entrar com Facebook</string>
    <string name="signin_with_accounts_btn_input_account_github">Entrar com Github</string>
    <string name="signin_with_accounts_btn_input_account_linkedin">Entrar com Linkedin</string>

    <!-- Fragment Signin Information E-mail -->
    <string name="signin_information_email_title_welcome">Bem-vindo de volta!</string>
    <string name="signin_information_email_label_email">Qual é o seu <b>e-mail?</b></string>

    <!-- Fragment Signin Create Account -->
    <string name="signinn_information_password_title">Qual é a sua <b>senha?</b></string>
    <string name="signinn_information_password_label_not_remember_password">Esqueceu <font color='#5000B8'><b>sua senha?</b></font></string>
    <string name="signinn_information_password_btn_signin">Entrar</string>

</resources>