<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninWithAccountsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_logo_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logo_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/signin_with_accounts_txt_subtitle"
            android:textAlignment="center"
            android:textColor="#101010"
            android:textSize="34dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_top" />

        <Button
            android:id="@+id/btn_account_uberhub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_uberhub_alone"
            android:background="@drawable/rounded_button_purple"
            android:text="@string/signin_with_accounts_btn_input_account_uberhub"
            android:textSize="14dp"
            android:textAllCaps="true"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_subtitle" />

        <Button
            android:id="@+id/btn_account_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_white"
            android:theme="@style/Theme.Button.Google"
            android:textColor="#000"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_google"
            android:gravity="center|center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/signin_with_accounts_btn_input_account_google"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_uberhub" />

        <Button
            android:id="@+id/btn_account_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_white"
            android:theme="@style/Theme.Button.Facebook"
            android:textColor="#FFF"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="center|center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/signin_with_accounts_btn_input_account_facebook"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_google" />

        <Button
            android:id="@+id/btn_account_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:theme="@style/Theme.Button.Github"
            android:background="@drawable/rounded_button_white"
            android:textColor="@color/color_white"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_github"
            android:gravity="center|center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/signin_with_accounts_btn_input_account_github"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_facebook" />

        <Button
            android:id="@+id/btn_account_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:theme="@style/Theme.Button.Linkedin"
            android:background="@drawable/rounded_button_test"
            android:textColor="@color/color_white"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_linkedin"
            android:gravity="center|center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/signin_with_accounts_btn_input_account_linkedin"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_github" />

        <TextView
            android:id="@+id/label_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signin_create_account_label_have_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_linkedin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>